# mclib

./: .gitmodules  CMakeLists.txt  LICENSE  McLib.natvis  build.sh
include/: arena.h  array.h  array_byte.h  array_slice.h  data_node.h  data_tree.h  data_view.h  map.h  mat.h  packedmap.h  pair.h  partition.h  quat.h  slice.h  slotkey.h  slotmap.h  span.h  span_base.h  span_byte.h  span_slice.h  str.h  str_format.h  types.h  utility.h  vec.h  view.h
src/: array.c  data_node.c  data_tree.c  map.c  mat.c  packedmap.c  quat.c  slice.c  slotmap.c  span.c  str.c  str_format.c  utility.c  vec.c  view.c
tst/: array_spec.c  data_node_spec.c  data_tree_spec.c  map_spec.c  mat_spec.c  natvis.c  packedmap_spec.c  quat_spec.c  slice_spec.c  slotmap_spec.c  span_spec.c  spec_main.c  str_spec.c  vec_spec.c
tst/natvis/: natvis.c
